--- a/Bettendorf_215_SelfOrganizingList/Bettendorf_215_SelfOrganizingList.vcxproj
+++ b/Bettendorf_215_SelfOrganizingList/Bettendorf_215_SelfOrganizingList.vcxproj
@@ -129,6 +129,13 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="book.h" />
+    <ClInclude Include="link.h" />
+    <ClInclude Include="list.h" />
+    <ClInclude Include="llist.h" />
+    <ClInclude Include="SelfOrderedListADT.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
