--- a/Bettendorf_215_SelfOrganizingList/Bettendorf_215_SelfOrganizingList.vcxproj.filters
+++ b/Bettendorf_215_SelfOrganizingList/Bettendorf_215_SelfOrganizingList.vcxproj.filters
@@ -19,4 +19,21 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="book.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="link.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="list.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="llist.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SelfOrderedListADT.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
