Created private variables for Heuristics.h

--- a/Bettendorf_215_SelfOrganizingList/Bettendorf_215_SelfOrganizingList.vcxproj
+++ b/Bettendorf_215_SelfOrganizingList/Bettendorf_215_SelfOrganizingList.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="book.h" />
+    <ClInclude Include="Heuristics.h" />
     <ClInclude Include="link.h" />
     <ClInclude Include="list.h" />
     <ClInclude Include="llist.h" />
