--- a/Bettendorf_215_SelfOrganizingList/Bettendorf_215_SelfOrganizingList.vcxproj.filters
+++ b/Bettendorf_215_SelfOrganizingList/Bettendorf_215_SelfOrganizingList.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="SelfOrderedListADT.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Heuristics.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
