--- a/Bettendorf_215_SelfOrganizingList/Bettendorf_215_SelfOrganizingList.vcxproj
+++ b/Bettendorf_215_SelfOrganizingList/Bettendorf_215_SelfOrganizingList.vcxproj
@@ -137,6 +137,9 @@
     <ClInclude Include="llist.h" />
     <ClInclude Include="SelfOrderedListADT.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="test.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
